force-app/main/default/objects/Market__c/fields/District_NAME__c.field-meta.xml
<CustomField>
    <fullName>District_NAME__c</fullName>
    <label>District NAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>