force-app/main/default/objects/Market__c/fields/Owning_District_Id__c.field-meta.xml
<CustomField>
    <fullName>Owning_District_Id__c</fullName>
    <externalId>true</externalId>
    <label>Owning District Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>