force-app/main/default/objects/Market__c/fields/Parent_Billing_Market__c.field-meta.xml
<CustomField>
    <fullName>Parent_Billing_Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Billing Market</label>
    <referenceTo>Parent_Billing_Market__c</referenceTo>
    <relationshipLabel>Markets</relationshipLabel>
    <relationshipName>Markets</relationshipName>
    <type>Lookup</type>
</CustomField>