force-app/main/default/objects/Market__c/fields/QTB_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>QTB_Address_Line_2__c</fullName>
    <label>Address Line 2</label>
    <length>150</length>
    <type>Text</type>
</CustomField>