force-app/main/default/objects/Market__c/fields/QTB_Oracle_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>QTB_Oracle_Location_Code__c</fullName>
    <label>Oracle Location Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>