force-app/main/default/objects/Market__c/fields/QTB_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>QTB_Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>