force-app/main/default/objects/Market__c/fields/QTB_State__c.field-meta.xml
<CustomField>
    <fullName>QTB_State__c</fullName>
    <label>State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>