force-app/main/default/objects/Market__c/fields/QTB_State_Code__c.field-meta.xml
<CustomField>
    <fullName>QTB_State_Code__c</fullName>
    <label>State Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>