force-app/main/default/objects/Market__c/fields/Time_Zone_Name__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone_Name__c</fullName>
    <description>Populated through a workflow.</description>
    <label>Time Zone Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>