force-app/main/default/objects/Market__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Area_Name__c</columns>
    <columns>NAME</columns>
    <columns>District_NAME__c</columns>
    <columns>Owning_District_Id__c</columns>
    <columns>Time_Zone__c</columns>
    <columns>Holiday_Schedule__c</columns>
    <columns>Division_Name__c</columns>
    <columns>QTB_Oracle_Location_Code__c</columns>
    <columns>Location_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Territory_name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>