force-app/main/default/objects/Market__c/listViews/NCisz_Market_view.listView-meta.xml
<ListView>
    <fullName>NCisz_Market_view</fullName>
    <columns>Area_Name__c</columns>
    <columns>NAME</columns>
    <columns>District_NAME__c</columns>
    <columns>Owning_District_Id__c</columns>
    <columns>Time_Zone__c</columns>
    <columns>Holiday_Schedule__c</columns>
    <columns>Division_Name__c</columns>
    <columns>QTB_Oracle_Location_Code__c</columns>
    <columns>Location_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Territory_name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IM_Country__c</field>
        <operation>equals</operation>
        <value>Hong Kong</value>
    </filters>
    <label>NCisz Market view</label>
    <sharedTo>
        <role>Support_Supervisor</role>
    </sharedTo>
</ListView>